there is some features i hope to add

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# Editor configuration, see https://editorconfig.org
+this.counterservice.counterVal# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
