--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^5.13.16",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
