--- a/package.json
+++ b/package.json
@@ -27,13 +27,28 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@popperjs/core": "^2.11.8",
     "angular-font-awesome": "^3.1.2",
+    "assert": "^2.1.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
     "docker": "^1.0.0",
+    "dotenv": "^16.3.1",
     "jquery": "^3.7.0",
+    "jwt-decode": "^3.1.2",
     "ngx-owl-carousel-o": "^16.0.0",
+    "os-browserify": "^0.3.0",
     "owl.carousel": "^2.3.4",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
+    "stream-browserify": "^3.0.0",
+    "sweetalert2": "^11.7.31",
     "tslib": "^2.3.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -41,9 +56,13 @@
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/localize": "^16.0.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.4",
     "@types/bootstrap": "^5.2.6",
+    "@types/crypto-js": "^4.1.2",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
+    "@types/jsonwebtoken": "^9.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
