--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "angular-highcharts": "^13.0.1",
     "bootstrap": "^5.3.0",
+    "highcharts": "^11.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
