--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-highcharts": "^13.0.1",
     "bootstrap": "^5.3.0",
     "highcharts": "^11.1.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
@@ -37,6 +38,7 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.22",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
